--- a/www/pages/login.html
+++ b/www/pages/login.html
@@ -9,36 +9,39 @@
           <div class="arrow-tail"></div>
         </div>
       </div>
-      <div class="center-vertically animate fadeIn">
+    </div>
+    <div class="animate fadeIn">
 
-        <div class="block">
-          <form>
-            <div class="list">
-              <ul>
-                <li class="item-content item-input">
-                  <div class="item-inner">
-                    <div class="item-input-wrap">
-                      <input id="uname" type="text" name="email" placeholder="Email address">
-                    </div>
+      <div class="block">
+        <form>
+          <div class="list">
+            <ul>
+              <li class="item-content item-input">
+                <div class="item-inner">
+                  <div class="item-input-wrap">
+                    <input id="uname" type="text" name="email" placeholder="Email address">
                   </div>
-                </li>
-                <li class="item-content item-input">
-                  <div class="item-inner">
-                    <div class="item-input-wrap">
-                      <input id="pword" type="password" placeholder="Password">
-                    </div>
+                </div>
+              </li>
+              <li class="item-content item-input">
+                <div class="item-inner">
+                  <div class="item-input-wrap">
+                    <input id="pword" type="password" placeholder="Password">
                   </div>
-                </li>
-              </ul>
-            </div>
-            <div class="block">
-              <div class="block-footer">
-                <a class="button button-fill button-round" onclick="signIn()">Sign In</a>
-                <p id="errmsg" style="color: red;"></p>
-                <p>New user? <a href="/signup-screen/" class="link">Sign Up</a></p>
-              </div>
-            </div>
-          </form>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <a class="button button-fill button-round" onclick="signIn()">Sign In</a>
+          <p id="errmsg" style="color: red; text-align: center;"></p>
+        </form>
+      </div>
+    </div>
+    <div class="animate fadeIn">
+      <div class="block">
+        <div class="block-footer">
+
+          <p>New user? <a href="/signup-screen/" class="link">Sign Up</a></p>
         </div>
       </div>
     </div>
