--- a/www/pages/signup.html
+++ b/www/pages/signup.html
@@ -9,62 +9,77 @@
           <div class="arrow-tail"></div>
         </div>
       </div>
-      <div class="center-vertically animate fadeIn">
-
-        <div class="block">
-          <form>
-            <div class="list">
-              <ul>
-                <li class="item-content item-input">
-                  <div class="item-inner">
-                    <div class="item-input-wrap">
-                      <input id="email" type="email" placeholder="Email address">
-                    </div>
+    </div>
+    <div class="animate fadeIn no-padding-bottom">
+      <div class="block">
+        <form>
+          <div class="list">
+            <ul>
+              <li class="item-content item-input">
+                <div class="item-inner">
+                  <div class="item-input-wrap">
+                    <input id="email" type="email" placeholder="Email address">
                   </div>
-                </li>
-                <li class="item-content item-input">
-                  <div class="item-inner">
-                    <div class="item-input-wrap">
-                      <input id="newpword" type="password" placeholder="Password">
-                    </div>
+                </div>
+              </li>
+              <li class="item-content item-input">
+                <div class="item-inner">
+                  <div class="item-input-wrap">
+                    <input id="newpword" type="password" placeholder="Password">
                   </div>
-                </li>
-                <li class="item-content item-input">
-                  <div class="item-inner">
-                    <div class="item-input-wrap">
-                      <input id="firstName" type="text" placeholder="First name">
-                    </div>
+                </div>
+              </li>
+              <li class="item-content item-input">
+                <div class="item-inner">
+                  <div class="item-input-wrap">
+                    <input id="firstName" type="text" placeholder="First name">
                   </div>
-                </li>
-                <li class="item-content item-input">
-                  <div class="item-inner">
-                    <div class="item-input-wrap">
-                      <input id="lastName" type="text" placeholder="Last name">
+                </div>
+              </li>
+              <div class="row">
+                <div class="col-70">
+                  <li class="item-content item-input">
+                    <div class="item-inner">
+                      <div class="item-input-wrap">
+                        <input id="lastName" type="text" placeholder="Last name">
+                      </div>
                     </div>
-                  </div>
-                </li>
-                <li class="item-content item-input">
-                  <div class="item-inner">
-                    <div class="item-input-wrap">
-                      <input id="age" type="number" placeholder="Age">
+                  </li>
+                </div>
+                <div class="col-30">
+                  <li class="item-content item-input">
+                    <div class="item-inner">
+                      <div class="item-input-wrap">
+                        <input id="age" type="number" placeholder="Age">
+                      </div>
                     </div>
-                  </div>
-                </li>
-
-              </ul>
-            </div>
-            <div class="block">
-              <div class="block-footer">
-
-                <a class="button button-fill button-round" href="" onclick="signUp()">Next</a>
-                <p>By signing up, you agree to the <br><a href="#" class="link no-ripple">terms and conditions</a></p>
-                <p>Already a user? <a href="/login-screen/" class="link">Sign In</a></p>
-                <p id="newerrmsg" style="color: red;"></p>
+                  </li>
+                </div>
               </div>
+            </ul>
+          </div>
+          <div class="block">
+            <div class="block-footer">
+              <a class="button button-fill button-round" href="" onclick="signUp()">Next</a>
+              <p>By signing up, you agree to the <br><a class="link no-ripple popup-open" href="#" data-popup=".popup-terms-and-conditions">terms and conditions</a></p>
+              <p id="newerrmsg" style="color: red;"></p>
             </div>
-          </form>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="animate fadeIn">
+      <div class="block no-margin-top">
+        <div class="block-footer">
+          <p>Already a user? <a href="/login-screen/" class="link">Sign In</a></p>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="popup popup-terms-and-conditions">
+    <div style="padding: 16px">
+      <p class="no-margin-top"><a class="link popup-close" href="#"><i class="material-icons">close</i></a></p>
+      <p>bla bla bla...</p>
     </div>
   </div>
 </div>
