Further Fixes to sign up flow and some cleaning. BTW signUp now works completly as far is im aware of. Let me know if you can break it

--- a/www/pages/welcome.html
+++ b/www/pages/welcome.html
@@ -53,7 +53,7 @@
                   </li>
                 </ul>
               </div>
-              <button class="button button-fill button-round" onclick="signupNext()">NEXT</button>
+              <button class="button button-fill button-round" onclick="welcomePageNext()"()">NEXT</button>
               <p id="error-message" style="color: red; text-align: center; padding-top: 8px;"></p>
             </div>
           </div>
