Setup reloading the home page! Now whenever you join a chat,leave a chat, edit data .etc you are redirected to the main page with the new data!

--- a/www/pages/new_chat.html
+++ b/www/pages/new_chat.html
@@ -58,6 +58,6 @@
     </div>
   </div>
   <div style="background-color: rgba(0,0,0,0)" class="toolbar toolbar-bottom no-shadow">
-    <a onclick="createNewEvent()" class="button button-fill button-round">Create Chat</a>
+    <a onclick="createChat()" class="button button-fill button-round">Create Chat</a>
   </div>
 </div>
