--- a/www/pages/welcome.html
+++ b/www/pages/welcome.html
@@ -28,7 +28,7 @@
             <div style="width: 100%">
               <label>
                 <div id="profile-pic-preview" class="profile-pic-upload">
-                  <input id="profile-pic" type="file" accept="image/jpeg, image/png" onchange="previewPic(event)" />
+                  <input id="profile-pic-input" type="file" accept="image/jpeg, image/png" onchange="previewPic(event)" />
                   <i id="profile-pic-icon" class="material-icons">add_photo_alternate</i>
                 </div>
               </label>
