--- a/www/pages/welcome.html
+++ b/www/pages/welcome.html
@@ -28,7 +28,7 @@
             <div style="width: 100%">
               <label>
                 <div id="profile-pic-preview" class="profile-pic-upload">
-                  <input id="profile-pic-input" type="file" accept="image/jpeg, image/png" onchange="previewPic(event)" />
+                  <input id="profile-pic-input" type="file" accept="image/jpeg, image/png" onchange="previewPic(event, 'profile')" />
                   <i id="profile-pic-icon" class="material-icons">add_photo_alternate</i>
                 </div>
               </label>
@@ -53,7 +53,7 @@
                   </li>
                 </ul>
               </div>
-              <button class="button button-fill button-round" onclick="welcomePageNext()"()">NEXT</button>
+              <button class="button button-fill button-round" onclick="welcomePageNext()" ()">NEXT</button>
               <p id="error-message" style="color: red; text-align: center; padding-top: 8px;"></p>
             </div>
           </div>
