fixed chat preweiw

--- a/www/pages/preview_chat.html
+++ b/www/pages/preview_chat.html
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div style="background-color: rgba(0,0,0,0)" class="toolbar toolbar-bottom no-shadow">
-    <a onclick="subscribeToChat(User.uid,currentChat)" class="button button-fill button-round">Join Chat</a>
+    <a id="join-chat" class="button button-fill button-round">Join Chat</a>
   </div>
   <div class="page-content messages-content infinite-scroll-content infinite-scroll-top">
     <div class="preloader infinite-scroll-preloader"></div>
