--- a/www/pages/preview_chat.html
+++ b/www/pages/preview_chat.html
@@ -9,7 +9,7 @@
   <div class="navbar">
     <div class="navbar-inner">
       <div class="left"><a class="link back icon-only"><i class="material-icons">arrow_back</i></a></div>
-      <div id="group-name" class="title">Chat Group Name</div>
+      <div id="chat-name" class="title">Chat Group Name</div>
       <div class="right"><a href="#" class="link panel-open icon-only" data-panel="right"><i class="material-icons">people</i></a></div>
     </div>
   </div>
