--- a/www/pages/chat.html
+++ b/www/pages/chat.html
@@ -6,12 +6,12 @@
       </ul>
     </div>
     <div class="hairline"></div>
-    <div class="row justify-content-center" style="margin: 16px"><button onclick="unsubscribeFromChat()" class="button panel-close text-align-center back">Leave Group</button></div>
+    <div class="row justify-content-center" style="margin: 16px"><button id="leave-chat" class="button panel-close text-align-center back">Leave Group</button></div>
   </div>
   <div class="navbar">
     <div class="navbar-inner">
       <div class="left"><a class="link back icon-only"><i class="material-icons">arrow_back</i></a></div>
-      <div id="group-name" class="title">Chat Group Name</div>
+      <div id="chat-name" class="title">Chat Group Name</div>
       <div class="right"><a href="#" class="link panel-open icon-only" data-panel="right"><i class="material-icons">people</i></a></div>
     </div>
   </div>
