--- a/www/pages/about.html
+++ b/www/pages/about.html
@@ -13,8 +13,8 @@
       <div class="text-align-center">
         <img src="media/logo.png" style="height: 100px; border-radius: 0">
         <h2>sit with us</h2>
-        <p>Version 1.0</p>
-        <p>&copy; 2019 Overstep LLC. All rights reserved<p>
+        <p>Version 0.1</p>
+        <p>&copy; 2020 Sydney's Smiles Inc. All rights reserved<p>
       </div>
 
     </div>
