--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -23,28 +23,12 @@
             <div class="item-inner">Settings</div>
           </li>
         </a>
-        <a href="/about-screen/" class="panel-close item-link no-chevron">
-          <li class="item-content">
-            <div class="item-media"><i class="material-icons">info</i></div>
-            <div class="item-inner">About</div>
-          </li>
-        </a>
         <a href="#" onclick="signOut()" class="panel-close item-link no-chevron">
           <li class="item-content">
             <div class="item-media"><i class="material-icons">cloud_off</i></div>
             <div class="item-inner">Sign Out</div>
           </li>
         </a>
-
-
-
-        <a href="/welcome-page/" class="panel-close item-link no-chevron">
-          <li class="item-content">
-            <div class="item-media"><i class="material-icons">add</i></div>
-            <div class="item-inner">Welcome Screen</div>
-          </li>
-        </a>
-
       </ul>
     </div>
   </div>
@@ -97,7 +81,7 @@
     </div>
     <div class="toolbar toolbar-home">
       <a href="#tab-1" class="tab-link tab-link-active no-ripple">Subscribed</a>
-      <a href="#tab-2" class="tab-link no-ripple">Unsubscribed</a>
+      <a href="#tab-2" class="tab-link no-ripple unsubscribed">Unsubscribed</a>
       <a href="#tab-3" class="tab-link no-ripple">Members</a>
     </div>
     <div class="tabs-swipeable-wrap" style="height: calc(70% - 48px)">
