--- a/www/pages/new_event.html
+++ b/www/pages/new_event.html
@@ -12,7 +12,7 @@
     <h1 style="margin-left: 16px">New Event</h1>
     <label>
       <div id="event-pic-preview" class="profile-pic-upload" style="border-radius: 15px; width: 80vw; height: 35vw">
-        <input id="event-pic" type="file" accept="image/jpeg, image/png" onchange="previewPic(event, 'event')" />
+        <input id="event-pic" type="file" accept="image/jpeg, image/png" onchange="previewPic(event, this)" />
         <i id="event-pic-icon" class="material-icons">add_photo_alternate</i>
       </div>
     </label>
