--- a/www/pages/school_search.html
+++ b/www/pages/school_search.html
@@ -22,7 +22,7 @@
       </div>
       <div class="list no-hairlines" style=" background-color: #edeff2">
         <ul id="schools-list" style=" background-color: #edeff2">
-          <p>Search for your school by zip code</p>
+          <p class="text-align-center">Search for your school by zip code</p>
         </ul>
       </div>
     </div>
