--- a/www/pages/settings.html
+++ b/www/pages/settings.html
@@ -63,6 +63,8 @@
       <div id="google_translate_element"></div>
       <div class="block-title">Customization</div>
       <div class="hairline"></div>
+
+      <!---
       <div class="list no-hairlines no-margin-top no-margin-bottom">
         <ul>
           <a class="item-link sheet-open" href="#" data-sheet=".color-palette">
@@ -76,6 +78,8 @@
 
         </ul>
       </div>
+-->
+
       <div class="list simple-list no-hairlines no-hairlines-between no-margin-top">
         <ul>
           <li>
@@ -93,7 +97,12 @@
         <ul>
           <a class="item-link popup-open" href="#" data-popup=".popup-terms-and-conditions">
             <li class="item-content">
-              <div class="item-inner">Terms of use</div>
+              <div class="item-inner">Terms of Use</div>
+            </li>
+          </a>
+          <a class="item-link" href="/about-screen/">
+            <li class="item-content">
+              <div class="item-inner">About</div>
             </li>
           </a>
         </ul>
@@ -128,7 +137,7 @@
 
 
   <div class="popup popup-terms-and-conditions">
-    <div style="padding: 16px; height: 100%; overflow-y: scroll">
+    <div style="padding: 16px; height: 100%; overflow-y: scroll; background-color: var(--f7-card-bg-color)">
       <p class="no-margin-top"><a class="link popup-close" href="#"><i class="material-icons">close</i></a></p>
       <div style="text-align: center">
         <h1 class="no-margin-bottom"><strong>TERMS OF USE</strong></h1>
